--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,6 +16,7 @@
         <nav class="flex items-center gap-1 sm:gap-2">
           <a class="btn px-3 py-2 sm:px-4 sm:py-2" href="/">Home</a>
           <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/tasks/">Tasks</a>
+          <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/shopping/">Shopping</a>
           <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/rooms/">Rooms</a>
           <form method="post" action="/.netlify/functions/logout">
             <button class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" type="submit">Sign out</button>
