--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,6 +17,7 @@
           <a class="btn px-3 py-2 sm:px-4 sm:py-2" href="/">Home</a>
           <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/tasks/">Tasks</a>
           <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/shopping/">Shopping</a>
+          <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/reports/">Reports</a>
           <a class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" href="/rooms/">Rooms</a>
           <form method="post" action="/.netlify/functions/logout">
             <button class="btn-secondary px-3 py-2 sm:px-4 sm:py-2" type="submit">Sign out</button>
